Tue Jun 10 05:34:52 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>

	* include/xapian/weight.h,weight/inl2weight.cc: Optimized
	  upper bound and weighting formula in InL2Weight.

Tue Jun 10 05:09:08 GMT 2014  Olly Betts <olly@survex.com>

	* examples/quest.cc: Add --weight option to allow the weighting scheme
	  to be specified.

Thu Jun 05 03:42:51 GMT 2014  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,tests/api_backend.cc: Fix
	  Database::get_wdf_upper_bound("") not to fail with an assertion.

Tue Jun 03 22:59:10 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/localsubmatch.cc: Use RETURN() instead of return in methods
	  with LOGCALL annotations.

Mon Jun 02 13:15:36 GMT 2014  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Actually ship, process and install geospatial.rst.

Mon Jun 02 11:40:27 GMT 2014  Olly Betts <olly@survex.com>

	* languages/Makefile.mk: Ship collate-sbl script.

Thu May 29 12:13:06 GMT 2014  Olly Betts <olly@survex.com>

	* HACKING: Replace a link to the outdated autotools "goat book" with a
	  link to the "Portable Shell" chapter of the autoconf manual.

Thu May 29 03:31:10 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc,api/snipperinternal.h,include/xapian/snipper.h: Allow
	  the user to specify how long a snippet they want.  Only add "..." if
	  the sample was actually truncated.

Wed May 28 12:52:26 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/snipper.h: Add the standard guards to prevent user
	  code from including this header directly.

Tue May 27 04:19:12 GMT 2014  Olly Betts <olly@survex.com>

	* include/Makefile.mk: Ship include/xapian/snipper.h in tarball.

Tue May 27 04:03:09 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc,include/xapian/snipper.h,
	  tests/generate-api_generated: Add missing assignment operator to
	  Xapian::Snipper class.

Tue May 27 03:43:03 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/snipper.h: Add missing doxygen comments.
