@@ -1,7 +1,7 @@
 /** @file ifb2weight.cc
  * @brief Xapian::IfB2Weight class - the IfB2 weighting scheme of the DFR framework.
  */
-/* Copyright (C) 2013 Aarsh Shah
+/* Copyright (C) 2013,2014 Aarsh Shah
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -39,7 +39,6 @@ IfB2Weight::IfB2Weight(double c)
     need_stat(AVERAGE_LENGTH);
     need_stat(DOC_LENGTH);
     need_stat(DOC_LENGTH_MIN);
-    need_stat(DOC_LENGTH_MAX);
     need_stat(COLLECTION_SIZE);
     need_stat(COLLECTION_FREQ);
     need_stat(WDF);
@@ -65,21 +64,26 @@ IfB2Weight::init(double factor_)
 	return;
     }
 
-    double wdfn_lower(1.0);
     double F(get_collection_freq());
     double N(get_collection_size());
-
-    wdfn_lower *= log2(1 + (param_c * get_average_length()) /
-		    get_doclength_upper_bound());
 
     wdfn_upper *= log2(1 + (param_c * get_average_length()) /
 		    get_doclength_lower_bound());
 
-    double B_max = (F + 1.0) / (get_termfreq() * (wdfn_lower + 1.0));
-
+    // This term is constant for all documents.
     double idf_max = log2((N + 1.0) / (F + 0.5));
 
-    upper_bound = wdfn_upper * get_wqf() * B_max * idf_max;
+    /* Calculate constant values to be used in get_sumpart(). */
+    wqf_product_idf = get_wqf() * idf_max;
+    c_product_avlen = param_c * get_average_length();
+    B_constant = (F + 1.0) / get_termfreq();
+
+    // wdfn * B = wdfn * (F + 1.0) / (get_termfreq() * (wdfn + 1.0)).
+    // By cancelling out wdfn, we get (F + 1.0) / (get_termfreq() * (1.0 + 1.0 / wdfn)).
+    // In order to maximize the product, we need to minimize the denominator, and so we use wdfn_upper.
+    double max_wdfn_product_B = B_constant / (1.0 + (1.0 / wdfn_upper));
+
+    upper_bound = wqf_product_idf * max_wdfn_product_B;
 }
 
 string
@@ -110,16 +114,11 @@ IfB2Weight::get_sumpart(Xapian::termcount wdf, Xapian::termcount len) const
 {
     if (wdf == 0) return 0.0;
     double wdfn(wdf);
-    wdfn *= log2(1 + (param_c * get_average_length()) / len);
+    wdfn *= log2(1 + c_product_avlen / len);
 
-    double F(get_collection_freq());
-    double N(get_collection_size());
+    double wdfn_product_B = B_constant / (1.0 + (1.0 / wdfn));
 
-    double B = (F + 1.0) / (get_termfreq() * (wdfn + 1.0));
-
-    double idf = log2((N + 1.0) / (F + 0.5));
-
-    return (wdfn * get_wqf() * B * idf * factor);
+    return (wqf_product_idf * wdfn_product_B * factor);
 }
 
 double
