@@ -1,3 +1,8 @@
+Tue Jun 10 08:15:18 GMT 2014  Olly Betts <olly@survex.com>
+
+	* include/xapian/weight.h,weight/ifb2weight.cc: Optimized
+	  upper bound and weighting formula in IfB2Weight.
+
 Tue Jun 10 05:34:52 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>
 
 	* include/xapian/weight.h,weight/inl2weight.cc: Optimized
